+ 服务端下载构建器 * 修复了部分UI问题